feat: enhance JSON handling in TaskModel and TaskRepository